test/test/wordp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-blog
  template:
    metadata:
      labels:
        app: wordpress-blog
    spec:
      containers:
      - name: wordpress-blog
        image: jssong.azurecr.io/project/wordpress:latest
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - wordpress-blog
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: wordpress-blog

---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: wordpress-hpa
  namespace: ingress-nginx
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: wordpress-blog
  minReplicas: 1
  maxReplicas: 10
  targetCPUUtilizationPercentage: 60


# db 연결옵션
        env:
        - name: db_url
          valueFrom:
            secretKeyRef:
              name: tomcat-secret
              key: DB_URL
        - name: db_user
          valueFrom:
            secretKeyRef:
              name: tomcat-secret
              key: DB_USER
        - name: db_password
          valueFrom:
            secretKeyRef:
              name: tomcat-secret
              key: DB_PASSWORD
